<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.diosaraiva</groupId>
    <artifactId>plantuml-gui-java</artifactId>
    <version>1.5.1</version>
    <packaging>jar</packaging>
    <name>PlantUML GUI</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- 17 is the lowest LTS that compiles this code (records, switch rules, pattern matching)
             and it runs the bundled PlantUML JAR, whose classes require Java 11 or newer. -->
        <maven.compiler.release>17</maven.compiler.release>
    </properties>

    <build>
        <!-- The launchers derive every path from java_config.ini, so this name is mirrored there. -->
        <finalName>plantuml-gui-java</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>com.diosaraiva.plantumlgui.Main</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <!-- The deliverable is release/plantuml-gui-java.zip: the JAR plus both user launchers. -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.7.1</version>
                <configuration>
                    <appendAssemblyId>false</appendAssemblyId>
                    <outputDirectory>${project.basedir}/release</outputDirectory>
                    <descriptors>
                        <descriptor>src/assembly/release.xml</descriptor>
                    </descriptors>
                </configuration>
                <executions>
                    <execution>
                        <id>release-zip</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
